Fix the alignment in the landing page

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -30,7 +30,7 @@ section {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   text-align: center;
   width: 100%;
   height: 100vh;
@@ -42,9 +42,6 @@ section {
 section h1 {
   font-size: 4rem;
 }
-
-/* .happy-bday {
-} */
 
 .bday-pic {
   margin: 0 30px 0 30px;
